--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,7 @@
         <script src="scripts/controllers/reportadd.js"></script>
         <script src="scripts/controllers/reportdetail.js"></script>
         <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/services/report.js"></script>
         <!-- endbuild -->
 </body>
 </html>
