add config file

--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,7 @@
         <script src="scripts/controllers/reportdetail.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/services/report.js"></script>
+        <script src="scripts/services/config.js"></script>
         <!-- endbuild -->
 </body>
 </html>
