--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
 
       <div class="footer">
         <div class="container">
-          <p><span class="glyphicon glyphicon-heart"></span> </p>
+          <!-- <p><span class="glyphicon glyphicon-heart"></span> </p> -->
         </div>
       </div>
 
