--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,38 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
 
+      <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" ng-href="#/"><span class="text-primary">Customer Reports Management</span></a>
+          </div>
+
+          <div class="collapse navbar-collapse" id="main-nav">
+            <ul class="nav navbar-nav">
+              <li><a href="#/">Reports</a></li>
+              <li><a href="#/report/add">Add report</a></li>
+              </li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+              <li ng-if="globals.currentUser">
+                <a>
+                  <span class="glyphicon glyphicon-user"></span>
+                  <span class="text-info">{{ globals.currentUser.username }}</span>
+                </a>
+              </li>
+              <li ng-if="globals.currentUser"><a ng-href="#/logout">Logout</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
       <!-- Add your site or application content here -->
 
       <div class="">
