--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width">
+  <title>Customer Reports Management</title>
+  <meta name="description" content="">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
