--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@
 
       <!-- Add your site or application content here -->
 
-      <div class="">
+      <div class="container-fluid">
         <div ng-view="">
           
         </div>
